# CustomCpp

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  Package.swift  README.md  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  convert_lora_to_gguf.py  env_requirements.txt  llama.py  pyrightconfig.json  tokenizador.py
.devops/: full-rocm.Dockerfile  llama-cli-rocm.Dockerfile  llama-server-rocm.Dockerfile
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-low.yml  02-bug-medium.yml  03-bug-high.yml  04-bug-critical.yml  05-enhancement.yml  06-research.yml  07-refactor.yml  config.yml
.github/workflows/: bench.yml.disabled  build.yml  close-issue.yml  docker.yml  labeler.yml  nix-ci-aarch64.yml  nix-ci.yml  python-lint.yml  python-type-check.yml  server.yml
ci/: run.sh
common/: arg.cpp  common.cpp  common.h  log.cpp  log.h  ngram-cache.cpp  sampling.cpp  sampling.h
docs/: android.md  build.md  docker.md
docs/backend/: SYCL.md
examples/: CMakeLists.txt  json_schema_to_grammar.py
examples/batched/: batched.cpp
examples/batched-bench/: batched-bench.cpp
examples/benchmark/: CMakeLists.txt  benchmark-matmult.cpp
examples/convert-llama2c-to-ggml/: convert-llama2c-to-ggml.cpp
examples/cvector-generator/: cvector-generator.cpp  pca.hpp
examples/embedding/: embedding.cpp
examples/eval-callback/: eval-callback.cpp
examples/export-lora/: export-lora.cpp
examples/gen-docs/: gen-docs.cpp
examples/gguf-split/: gguf-split.cpp
examples/gritlm/: gritlm.cpp
examples/imatrix/: imatrix.cpp
examples/infill/: infill.cpp
examples/llama-bench/: llama-bench.cpp
examples/llava/: clip.cpp  convert_image_encoder_to_gguf.py  llava-cli.cpp  llava.cpp  minicpmv-cli.cpp
examples/lookahead/: lookahead.cpp
examples/lookup/: lookup-create.cpp  lookup-merge.cpp  lookup-stats.cpp  (+1 more)
ggml/: CMakeLists.txt
include/: llama.h
requirements/: requirements-convert_legacy_llama.txt
scripts/: debug-test.sh  run-with-preset.py  sync-ggml-am.sh  sync-ggml.last  sync-ggml.sh
src/: CMakeLists.txt  llama-impl.h  llama-sampling.cpp  llama-vocab.cpp  llama-vocab.h  llama.cpp  llama2.cpp  llama3.cpp  unicode-data.cpp  unicode.cpp
(+58 files in other folders)
